--- a/build.gradle
+++ b/build.gradle
@@ -7,14 +7,11 @@ plugins {
 }
 
 group 'io.ib67.oni'
-def ver="1.2"
-version ver
+version "1.3"
 repositories {
     mavenCentral()
     jcenter()
 }
-Properties localConf = new Properties()
-localConf.load(new FileReader("${System.getProperty("user.home")}/.gradle/gradle.properties"))
 gradlePlugin {
     plugins {
         linker {
@@ -40,7 +37,7 @@ publishing{
         artifact(MavenPublication) {
             groupId = "io.ib67.oni"
             artifactId = "Linker"
-            version = ver
+            version = project.version
 
             from components.kotlin
         }
@@ -51,6 +48,8 @@ publishing{
             name = "TmpLocal"
         }
         maven {
+            Properties localConf = new Properties()
+            if(file("${System.getProperty("user.home")}/.gradle/gradle.properties").exists()) localConf.load(new FileReader("${System.getProperty("user.home")}/.gradle/gradle.properties"))
             def baseUrl="https://repo.sfclub.cc"
             def releasesRepoUrl = "$baseUrl/releases"
             def snapshotsRepoUrl = "$baseUrl/snapshots"
